<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<ImageButton android:id="@+id/ImageButton01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/ic_logo"></ImageButton>
			<TextView android:layout_width="fill_parent" android:id="@+id/Title"
				android:layout_height="fill_parent" android:gravity="center"
				android:textSize="20sp" android:text="@string/title_about_heading" />
		</LinearLayout>

		<TextView android:id="@+id/TextView04" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/title_about_copyright_owner"
			android:linksClickable="true" android:autoLink="email"></TextView>
		<TextView android:id="@+id/TextView05" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:linksClickable="true"
			android:autoLink="web" android:text="@string/attribute_url"
			android:paddingTop="10sp"></TextView>

		<TextView android:layout_height="wrap_content" android:id="@+id/Version"
			android:paddingTop="10sp" android:text="@string/title_version"
			android:layout_width="fill_parent"></TextView>

		<TextView android:id="@+id/DictionaryTitle" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/title_about_dictionary"
			android:paddingTop="10sp" android:textStyle="bold"></TextView>
		<TextView android:text="TextView03" android:layout_height="wrap_content"
			android:id="@+id/Dictonary" android:autoLink="web"
			android:layout_width="fill_parent"></TextView>

		<TextView android:text="@string/title_about_ui_translation"
			android:id="@+id/TranslatorTitle" android:paddingTop="10sp"
			android:layout_width="fill_parent" android:layout_height="wrap_content" android:textStyle="bold"></TextView>
		<TextView android:text="@string/title_user_interface_translator"
			android:id="@+id/Translator" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:autoLink="email|web" />
		<TextView android:text="@string/title_about_translation_request"
		    android:layout_width="fill_parent" android:layout_height="wrap_content"
		    android:autoLink="web" />

		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/title_about_copyright"
			android:paddingTop="10sp" android:autoLink="web"></TextView>
	</LinearLayout>
</ScrollView>