<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<ImageButton android:id="@+id/ImageView01" android:src="@drawable/ic_logo"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageButton>
			<TextView android:id="@+id/TextView01" android:text="@string/title_help"
				android:layout_weight="1" android:layout_height="fill_parent"
				android:layout_width="fill_parent" android:gravity="center"
				android:textSize="19sp"></TextView>
		</LinearLayout>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/desc_help"
			android:id="@+id/HelpDescription" android:paddingTop="10sp"></TextView>
		<TextView android:id="@+id/HelpWebsite"
			android:layout_height="wrap_content" android:linksClickable="true"
			android:autoLink="web" android:text="@string/desc_see_website"
			android:layout_width="fill_parent" android:paddingTop="20sp"></TextView>
	</LinearLayout>
</ScrollView>
